scenarios/ciliumidentity-multicluster/specs/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: deathstar
  labels:
    applicationinstance.tess.io/name: deathstarai
    application.tess.io/name: deathstar
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    applicationinstance.tess.io/name: deathstarai
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deathstar
  labels:
    applicationinstance.tess.io/name: deathstarai
spec:
  replicas: 1
  selector:
    matchLabels:
      applicationinstance.tess.io/name: deathstarai
  template:
    metadata:
      labels:
        applicationinstance.tess.io/name: deathstarai
    spec:
      containers:
        - name: deathstar
          image: hub.tess.io/cloudmesh/starwars:v0.0.2
          volumeMounts:
            - mountPath: /podInfo
              name: pod-info
      volumes:
        - downwardAPI:
            defaultMode: 420
            items:
              - fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.labels
                path: labels
              - fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.annotations
                path: annotations
          name: pod-info
---
apiVersion: v1
kind: Pod
metadata:
  name: xwing
  labels:
    applicationinstance.tess.io/name: xwing
spec:
  containers:
    - name: xwing
      image: hub.tess.io/cloudmesh/starwars:v0.0.2
---
apiVersion: v1
kind: Pod
metadata:
  name: tiefighter
  labels:
    applicationinstance.tess.io/name: tiefighter
spec:
  containers:
    - name: tiefighter
      image: hub.tess.io/cloudmesh/starwars:v0.0.2
